# wagtail-celery-results

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  tbump.toml  tox.ini
.github/workflows/: build_n_publish.yml
tests/: requirements.txt  settings.py
wagtail_blocks_library/locale/: django.pot
wagtail_blocks_library/locale/en/LC_MESSAGES/: django.po
wagtail_blocks_library/locale/fr/LC_MESSAGES/: django.po
wagtail_celery_results/: apps.py  wagtail_hooks.py
